--- a/bower.json
+++ b/bower.json
@@ -1,8 +1,9 @@
 {
-  "name": "bootstrap3-typeahead",
+  "name": "bootstrap3-typeahead-shlatchz",
   "version": "4.0.2",
   "authors": [
-    "bassjobsen"
+    "bassjobsen",
+    "shlatchz"
   ],
   "main": [
     "bootstrap3-typeahead.js"
