--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bootstrap-3-typeahead",
   "description": "Bootstrap 3 Typeahead: The typeahead autocomplete plugin for Twitter's Bootstrap 2 ready to use with Bootstrap 3.",
-  "version": "4.0.2",
+  "version": "4.0.3",
   "main": "bootstrap3-typeahead.js",
   "keywords": [
     "typeahead",
@@ -10,17 +10,17 @@
     "jquery",
     "bootstrap"
   ],
-  "homepage": "https://github.com/bassjobsen/Bootstrap-3-Typeahead/",
-  "author": "Bass Jobsen",
+  "homepage": "https://github.com/ronyf/Bootstrap-3-Typeahead/",
+  "author": "Bass Jobsen & Rony Fragin",
   "scripts": {
     "test": "grunt test"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/bassjobsen/Bootstrap-3-Typeahead.git"
+    "url": "https://github.com/ronyf/Bootstrap-3-Typeahead.git"
   },
   "bugs": {
-    "url": "https://github.com/bassjobsen/Bootstrap-3-Typeahead/issues"
+    "url": "https://github.com/ronyf/Bootstrap-3-Typeahead/issues"
   },
   "license": "MIT",
   "devDependencies": {
